# nia_interpreter_core

./: .gitignore  Cargo.toml  output.txt  perf.data  test.nl
src/: lib.rs  main.rs
src/interpreter/: cons.rs  environment.rs  environment_arena.rs  error.rs  function.rs  interpreter.rs  mod.rs  object.rs  object_arena.rs  pre_reader.rs  reader.rs  symbol.rs  value.rs
src/interpreter/call_stack/: call_stack.rs  call_stack_item.rs  mod.rs
src/interpreter/cons/: cons.rs  cons_arena.rs  mod.rs
src/interpreter/context/: context.rs
src/interpreter/domain/: action.rs  convertable.rs  device_info.rs  device_key.rs  key.rs  key_chord.rs  lone_key.rs  mapping.rs  mod.rs  modifier_description.rs  named_action.rs
src/interpreter/environment/: environment.rs  environment_arena.rs  environment_id.rs  environment_value_wrapper.rs  mod.rs
src/interpreter/error/: assertion.rs  mod.rs
src/interpreter/evaluator/: define_environment_functions.rs  mod.rs  (+12 more)
src/keyboard_remapper/: key_chord.rs  key_chord_producer.rs  key_id.rs  keyboard_event.rs  keyboard_id.rs  keyboard_listener.rs  keyboard_listener_unifier.rs  mod.rs
src/parser/: boolean_element.rs  code.rs  delimited_symbols_element.rs  element.rs  float_element.rs  integer_element.rs  keyword_element.rs  mod.rs  object_element.rs  object_pattern_element.rs  parse_error.rs  prefix_element.rs  prefixed_element.rs  s_expression_element.rs  short_lambda_element.rs  string_element.rs  symbol_element.rs
src/repl/: mod.rs
src/utils/: assertion.rs  file_helpers.rs  mod.rs  stack.rs
tests/: mod.rs
tests/sicp/: chapter1.rs
(+516 files in other folders)
