[package]
name = "nia_interpreter_core"
version = "0.1.0"
authors = ["mirai"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
nom = "5.1.0"
nia_state_machine = { path = "../nia_state_machine" }
nia_events = { path = "../nia_events" }

[dev-dependencies]
pretty_assertions = "0.6.1"
