[package]
name = "nia_interpreter_core"
version = "0.1.0"
authors = ["mirai"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.5.3"
rand = "0.7.3"
nom = "5.1.1"
dirs = "2.0.2"
rustyline = "6.1.1"
nia_state_machine = { path = "../nia_state_machine" }
nia_events = { path = "../nia_events" }
nia_basic_assertions = { path = "../nia_basic_assertions" }

[dev-dependencies]
tempfile = "3.1.0"
